--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@react-three/drei": "^9.17.1",
     "@react-three/fiber": "^8.1.0",
+    "framer-motion": "^6.4.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-typed": "^1.2.0",
     "three": "^0.142.0"
   },
