--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
     "react-typed": "^1.2.0",
     "three": "^0.142.0"
   },
