--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-typed": "^1.2.0",
+    "swiper": "^8.3.2",
     "three": "^0.142.0"
   },
   "devDependencies": {
